changed background attachment fixed to only on desktop displays, no functionality on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -435,7 +435,11 @@ section {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed;
+}
+@media (min-width: 940px) {
+  .post-cover {
+    background-attachment: fixed;
+  }
 }
 
 .title-container {
